// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders filters 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "paddingLeft": 15,
        "paddingVertical": 15,
      }
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      style={
        Object {
          "paddingRight": 5,
        }
      }
    >
      <View
        alignItems="center"
        alignSelf="stretch"
        flex={1}
        flexDirection="row"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 25,
            "paddingLeft": 13,
            "paddingRight": 5,
          }
        }
      >
        <Input
          autoFocus={false}
          blurOnSubmit={true}
          onChangeText={[Function]}
          placeholder="placeholder"
          placeholderTextColor="#B2B0B2"
          returnKeyType="done"
          selectionColor="#4E4C4E"
          style={
            Object {
              "borderBottomWidth": 0,
              "color": "#4E4C4E",
              "flex": 1,
              "fontSize": 16,
              "paddingVertical": 5,
            }
          }
          value=""
        />
      </View>
      <IconButton
        name="filterIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#4E4C4E",
          }
        }
        type="MissionHub"
      />
    </View>
    <ScrollViewMock
      horizontal={true}
      style={
        Object {
          "marginTop": 7,
          "paddingHorizontal": 6,
          "paddingTop": 5,
        }
      }
    >
      <View
        alignItems="center"
        flexDirection="row"
        key="1"
        style={
          Object {
            "backgroundColor": "#4E4C4E",
            "borderRadius": 5,
            "marginRight": 5,
            "marginTop": 1,
            "paddingLeft": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 14,
            }
          }
        >
          filter 1
        </MyText>
        <IconButton
          name="cancelIcon"
          onPress={[Function]}
          pressProps={
            Array [
              "filter1",
            ]
          }
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
            }
          }
          type="MissionHub"
        />
      </View>
      <View
        alignItems="center"
        flexDirection="row"
        key="2"
        style={
          Object {
            "backgroundColor": "#4E4C4E",
            "borderRadius": 5,
            "marginRight": 5,
            "marginTop": 1,
            "paddingLeft": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 14,
            }
          }
        >
          filter 2
        </MyText>
        <IconButton
          name="cancelIcon"
          onPress={[Function]}
          pressProps={
            Array [
              "filter2",
            ]
          }
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
            }
          }
          type="MissionHub"
        />
      </View>
      <View
        alignItems="center"
        flexDirection="row"
        key="3"
        style={
          Object {
            "backgroundColor": "#4E4C4E",
            "borderRadius": 5,
            "marginRight": 5,
            "marginTop": 1,
            "paddingLeft": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 14,
            }
          }
        >
          filter 3
        </MyText>
        <IconButton
          name="cancelIcon"
          onPress={[Function]}
          pressProps={
            Array [
              "filter3",
            ]
          }
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
            }
          }
          type="MissionHub"
        />
      </View>
      <View
        alignItems="center"
        flexDirection="row"
        key="4"
        style={
          Object {
            "backgroundColor": "#4E4C4E",
            "borderRadius": 5,
            "marginRight": 5,
            "marginTop": 1,
            "paddingLeft": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 14,
            }
          }
        >
          filter 4
        </MyText>
        <IconButton
          name="cancelIcon"
          onPress={[Function]}
          pressProps={
            Array [
              "filter4",
            ]
          }
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
            }
          }
          type="MissionHub"
        />
      </View>
    </ScrollViewMock>
  </View>
  <View
    alignItems="center"
    flex={1}
    style={
      Object {
        "paddingTop": 15,
      }
    }
  >
    <MyText
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      No Results.
    </MyText>
  </View>
</View>
`;

exports[`renders search list 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "paddingLeft": 15,
        "paddingVertical": 15,
      }
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      style={
        Object {
          "paddingRight": 5,
        }
      }
    >
      <View
        alignItems="center"
        alignSelf="stretch"
        flex={1}
        flexDirection="row"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 25,
            "paddingLeft": 13,
            "paddingRight": 5,
          }
        }
      >
        <Input
          autoFocus={false}
          blurOnSubmit={true}
          onChangeText={[Function]}
          placeholder="placeholder"
          placeholderTextColor="#B2B0B2"
          returnKeyType="done"
          selectionColor="#4E4C4E"
          style={
            Object {
              "borderBottomWidth": 0,
              "color": "#4E4C4E",
              "flex": 1,
              "fontSize": 16,
              "paddingVertical": 5,
            }
          }
          value=""
        />
      </View>
      <IconButton
        name="filterIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#4E4C4E",
          }
        }
        type="MissionHub"
      />
    </View>
  </View>
  <View
    alignItems="center"
    flex={1}
    style={
      Object {
        "paddingTop": 15,
      }
    }
  >
    <MyText
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      No Results.
    </MyText>
  </View>
</View>
`;

exports[`renders text in search box 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "paddingLeft": 15,
        "paddingVertical": 15,
      }
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      style={
        Object {
          "paddingRight": 5,
        }
      }
    >
      <View
        alignItems="center"
        alignSelf="stretch"
        flex={1}
        flexDirection="row"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 25,
            "paddingLeft": 13,
            "paddingRight": 5,
          }
        }
      >
        <Input
          autoFocus={false}
          blurOnSubmit={true}
          onChangeText={[Function]}
          placeholder="placeholder"
          placeholderTextColor="#B2B0B2"
          returnKeyType="done"
          selectionColor="#4E4C4E"
          style={
            Object {
              "borderBottomWidth": 0,
              "color": "#4E4C4E",
              "flex": 1,
              "fontSize": 16,
              "paddingVertical": 5,
            }
          }
          value="test"
        />
        <IconButton
          name="cancelIcon"
          onPress={[Function]}
          style={
            Object {
              "color": "#4E4C4E",
              "fontSize": 16,
            }
          }
          type="MissionHub"
        />
      </View>
      <IconButton
        name="filterIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#4E4C4E",
          }
        }
        type="MissionHub"
      />
    </View>
  </View>
  <View
    alignItems="center"
    flex={1}
    style={
      Object {
        "paddingTop": 15,
      }
    }
  >
    <MyText
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      No Results.
    </MyText>
  </View>
</View>
`;
